hide old aim assist when new position isn't slipgatable

--- a/TODO
+++ b/TODO
@@ -68,6 +68,10 @@ Levels:
 	☐ orig 38
 	☐ orig 39
 	☐ orig 40
+	☐ spawn point: stairs level
+	☐ spawn point: infinite loop
+	☐ rework The Sadistic Level
+	☐ add hub doors to early levels, permaclosed before ???
 
 Graphics:
 	☐ Tiles
