hide aim assist when box is grabbed

--- a/TODO
+++ b/TODO
@@ -70,7 +70,7 @@ Levels:
 	☐ orig 40
 	☐ spawn point: stairs level
 	☐ spawn point: infinite loop
-	☐ rework The Sadistic Level
+	☐ rework The Sadistic Level (before spikes)
 	☐ add hub doors to early levels, permaclosed before ???
 
 Graphics:
